# audio-lab

./: README.md  README_zh-CN.md  package-lock.json  package.json  package.oo.yaml  pyproject.toml
flows/flow-1/: .flow.ui.oo.json  flow.oo.yaml
oo-locales/: en.json  zh-CN.json
subflows/audio-separate/: .subflow.ui.oo.json  subflow.oo.yaml
subflows/de-reverb/: .subflow.ui.oo.json  subflow.oo.yaml
subflows/lossless-pitch/: .subflow.ui.oo.json  subflow.oo.yaml
subflows/speech-to-text/: .subflow.ui.oo.json  subflow.oo.yaml
tasks/audio-separate-block/: index.ts  task.oo.yaml
tasks/de-reverb-block/: index.ts  task.oo.yaml
tasks/lossless-pitch-block/: index.ts  task.oo.yaml
tasks/speech-to-text/: main.py  task.oo.yaml
tasks/speech-to-text-core/: main.py  task.oo.yaml
tasks/text-to-audio/: main.py  task.oo.yaml
