[project]
name = "tuanzi-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "a1528zhang",email = "beingszhang@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "openai (>=1.109.0,<2.0.0)"
]

[tool.poetry]
package-mode = false
packages = [{include = "tuanzi_ai", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
